--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                 <h3>6.1. Execução dos Testes Automatizados</h3>
                 <div class="video-container">
                     <video controls autoplay muted loop>
-                        <source src="Teste-CypressE2E.mp4" type="video/mp4">
+                        <source src="Teste-Cypresse2e.mp4" type="video/mp4">
                         Seu navegador não suporta o elemento de vídeo.
                     </video>
                 </div>
