--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="section-content">
                 <h2>Introdução</h2>
                 <p>
-                    Este documento serve como um relatório abrangente de Qualidade (QA) para o projeto "Sorteador de Baús Game". Ele detalha a jornada de validação do sistema, desde os testes manuais iniciais focados na usabilidade, passando pelas melhorias implementadas, até a robusta automação de testes funcionais end-to-end com Cypress. Nosso objetivo é garantir a qualidade, aprimorar a experiência do usuário e assegurar a estabilidade do jogo.
+                    Este documento serve como um relatório abrangente de Qualidade (QA) para o projeto "Sorteador de Baús Game". Ele detalha a jornada de validação do sistema, desde os testes manuais iniciais focados na usabilidade, passando pelas melhorias implementadas, até a automação de testes funcionais end-to-end com Cypress. Meu objetivo é garantir a qualidade, aprimorar a experiência do usuário e assegurar a estabilidade do jogo.
                 </p>
                 <p>Você pode acessar o projeto principal aqui: <a href="https://gabrielbernarde.github.io/Sorteador-De-Baus-Game/" target="_blank" rel="noopener noreferrer">https://gabrielbernarde.github.io/Sorteador-De-Baus-Game/</a></p>
             </div>
